:heavy_plus_sign: Feat: add ts node types

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Rafael Angonese",
   "license": "ISC",
   "devDependencies": {
+    "@types/node": "^20.14.2",
     "tsup": "^8.1.0",
     "tsx": "^4.15.4",
     "typescript": "^5.4.5",
