--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "@astrojs/check": "^0.5.8",
     "astro": "^4.10.2",
-    "@fantastic/compiler": "^1.0.0",
+    "@fantastic/compiler": "file:../compiler",
     "typescript": "^5.2.2"
   }
 }
