:bug: Fix: resolutions string width

--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
   "devDependencies": {
     "tsup": "^8.1.0",
     "typescript": "^5.4.5"
+  },
+  "resolutions": {
+    "string-width": "4.2.3"
   }
 }
