--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev:compiler": "npm run dev --workspace packages/compiler",
     "dev:docs": "npm run dev --workspace packages/docs",
     "test": "npm run test -workspace packages/compiler",
-    "build": "npm run build --workspaces"
+    "build": "yarn workspaces run build"
   },
   "devDependencies": {
     "tsup": "^8.1.0",
