--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.5.8",
-    "astro": "^4.10.2",
+    "@astrojs/tailwind": "^5.1.0",
     "@fantastic/compiler": "*",
+    "astro": "^4.10.2",
+    "tailwindcss": "^3.4.4",
     "typescript": "^5.2.2"
   },
   "resolutions": {
