--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.5.8",
+    "@astrojs/mdx": "^3.1.0",
     "@astrojs/tailwind": "^5.1.0",
     "@fantastic/compiler": "*",
     "astro": "^4.10.2",
