:heavy_plus_sign: Feat: add tailwindcss/typrography dependency

--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -20,5 +20,8 @@
   },
   "resolutions": {
     "string-width": "4.2.3"
+  },
+  "devDependencies": {
+    "@tailwindcss/typography": "^0.5.13"
   }
 }
