--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -12,9 +12,14 @@
   "dependencies": {
     "@astrojs/check": "^0.5.8",
     "@astrojs/mdx": "^3.1.0",
+    "@astrojs/react": "^3.6.0",
     "@astrojs/tailwind": "^5.1.0",
     "@fantastic/compiler": "*",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
     "astro": "^4.10.2",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "tailwindcss": "^3.4.4",
     "typescript": "^5.2.2"
   },
