:package: Chore: update scripts to yarn

--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
     "packages/*"
   ],
   "scripts": {
-    "dev:compiler": "npm run dev --workspace packages/compiler",
-    "dev:docs": "npm run dev --workspace packages/docs",
-    "test": "npm run test -workspace packages/compiler",
+    "dev:compiler": "yarn dev --workspace packages/compiler",
+    "dev:docs": "yarn dev --workspace packages/docs",
+    "test": "yarn test -workspace packages/compiler",
     "build": "yarn workspaces run build"
   },
   "devDependencies": {
