--- a/packages/compiler/package.json
+++ b/packages/compiler/package.json
@@ -7,7 +7,7 @@
   "license": "ISC",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
-  "types": "dist/index.d.mts",
+  "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsup",
     "start": "tsx src/index.ts",
